2007-12-04  Badlop  <badlop@process-one.net>

	* .gitignore: Removed (EJAB-441)
	* src/.cvsignore: Likewise

	* src/mod_pubsub/mod_pubsub.erl: Bugfix: don't report the Jabber
	server as a pubsub service. Fixed URI.

2007-12-03  Mickael Remond  <mremond@process-one.net>

	* src/mod_muc.erl: Added option to limit the number of room a user is
	allowed to connect to (EJAB-445).
	* src/mod_muc_room.erl: Likewise.
	* doc/guide.tex: Likewise.:ChangeLog

2007-12-02  Badlop  <badlop@process-one.net>
	
	* src/ejabberdctl.cfg.example: Bugfix in kernel poll. Added SMP
	option. Reorganization of options
	* src/ejabberdctl.template: Added SMP option

	* src/Makefile.in: New options make uninstall and
	uninstall-all (EJAB-293)

2007-12-01  Mickael Remond  <mremond@process-one.net>

	* doc/Makefile: echo seems to interpret \n and \v under MacOSX
	Leopard. I fixed the problem but let me know if it breaks build
	chain in other contexts.

	* Doc/guide.tex: Updated Windows compilation instructions.
	* src/configure.erl: Likewise.

	* doc/ejabberd.hrl: Preparing ejabberd 2.0.0 beta release.
	* doc/version.tex: Likewise.
	
	* src/tls/Makefile.win32: Updated for latest Win32 OpenSSL library.

	* src/odbc_queries.erl: Added a default define value so that we
	can recompile the file manually with a simple erlc command (with the
        default generic value).

2007-12-01  Alexey Shchepin  <alexey@process-one.net>

	* src/mod_pubsub/Makefile.in: Removed mod_pubsub_old mentioning
	* src/mod_pubsub/Makefile.win32: Likewise

	* src/odbc/odbc_queries.erl: Reverted the previous patch because
	it produces "redefining macro 'generic'" compilation error

	* src/mod_caps.erl: CAPS support (thanks to Magnus Henoch)
	* src/ejabberd_local.erl: Support for IQ responses
	* src/jlib.erl: Added iq_query_or_response_info/1 function
	* src/jlib.hrl: Added NS_PUBSUB_ERRORS and NS_CAPS

	* src/mod_pubsub/Makefile.in: New pubsub+pep implementation
	(thanks to Christophe Romain and Magnus Henoch)